# cyberghost-linux

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  FlagDisplay.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  auth.rs  definitions.rs  main.rs
src/Components/: DroprightMenu.css  DroprightMenu.tsx
src/Components/Icons/: BrandingIcon.css  BrandingIcon.tsx  Openvpn.css  Openvpn.tsx  PowerButtonIcon.css  PowerButtonIcon.tsx  Wireguard.css  Wireguard.tsx
src/Screens/: LoginScreen.css  LoginScreen.tsx  ServerScreen.css  ServerScreen.tsx  VpnScreen.css  VpnScreen.tsx
src/api/: app_state.tsx
src/assets/: flags.py
