[package]
name = "cyberghost-linux"
version = "0.0.0"
description = "A linux frontend for the Cyberghost VPN, based on it's CLI"
authors = ["Ananya Timalsina"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
rust-ini = "0.21.0"
reqwest = { version = "0.12.2", features = ["json"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
